# skilltree

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
crate/: Cargo.toml
crate/src/: init.rs  main.rs  tree.rs
npm/: install.js  package.json  run.js
src/: adder.rs  config.rs  doctor.rs  finder.rs  fs_util.rs  git.rs  http.rs  lib.rs  linker.rs  lock.rs  main.rs  refs.rs  scanner.rs  serve.rs  tagger.rs  updater.rs  yaml.rs
src/app/: page.tsx  skills-view.tsx
src/messages/: en.ts
src/tui/: app.rs  keys.rs  mod.rs  ui.rs  ui_projects.rs  ui_skills.rs
web/: package.json  tsconfig.json
web/src/app/: layout.tsx
web/src/components/: empty-line.tsx  empty-state.tsx  locale-toggle.tsx  markdown-viewer.tsx  pill-toggle.tsx  providers.tsx  section.tsx  theme-toggle.tsx
web/src/lib/: claude-home.ts  i18n.ts  redact.ts  safe-read.ts  schemas.ts  yaml-lite.ts
web/src/lib/actions/: skilltree.ts
web/src/lib/readers/: claude-json.ts  claude-md.ts  commands.ts  memory.ts  plugins.ts  settings.ts  skills.ts  skilltree.ts  stats.ts
web/src/messages/: ko.ts
