[package]
name = "skilltree"
version = "0.1.13"
edition = "2021"
description = "Manage and visualize AI coding agent skill trees from the terminal"
repository = "https://github.com/steadymoka/skilltree"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
dirs = "6"
ratatui = "0.30.0"
crossterm = "0.29.0"
serde_json = "1.0.149"
open = "5.3.3"
ureq = "3.2.0"
rusqlite = { version = "0.33", features = ["bundled"] }
tempfile = "3"

[dev-dependencies]
